--- a/unix4.html
+++ b/unix4.html
@@ -106,12 +106,8 @@
     <td>match commands with keyword in their man pages</td>
   </tr>
 </table>
-<p align="center"><a href="unix3.html"><img src="media/left.gif" alt="Previous" width="37" height="39" border="0" /></a> 
-  <a href="index.html"><img src="media/home.gif" alt="Home" width="81" height="39" border="0" /></a><a href="unix5.html"><img src="media/right.gif" alt="Next" width="37" height="39" border="0" /></a></p>
-<p align="center"><script type="text/javascript"><!--
-  amazon_ad_tag = "unixtutorialf-20";  amazon_ad_width = "728";  amazon_ad_height = "90";  amazon_ad_logo = "hide";  amazon_ad_link_target = "new";  amazon_ad_price = "retail";  amazon_color_border = "E9ECF5";  amazon_color_link = "0000FF";  amazon_color_logo = "093697";  amazon_ad_categories = "abcdefg";//--></script>
-<script type="text/javascript" src="http://www.assoc-amazon.com/s/ads.js"></script></p>
-<p class="date"> M.Stonebank@surrey.ac.uk, &copy; 9th October 2000 </p>
+<p align="center"><a href="unix1.html"><img src="media/left.gif" alt="Previous" border="0" height="39" width="37" /></a> <a href="index.html"><img src="media/home.gif" alt="Home" border="0" height="39" width="81" /></a><a href="unix3.html"><img src="media/right.gif" alt="Next" border="0" height="39" width="37" /></a></p>
+<p class="date">M.Stonebank@surrey.ac.uk, © 9th October 2000 </p>
 </div>
-</body>
-</html>
+
+</body></html>
