--- a/unix7.html
+++ b/unix7.html
@@ -229,10 +229,8 @@
   Instead of typing <span class="command">make install</span>, simply type <span class="command">make install-strip</span></p>
 <p>&nbsp;</p>
 
-<p align="center" class="navbar"><a href="unix6.html"><img src="media/left.gif" alt="Previous" width="37" height="39" border="0" /></a> 
-  <a href="index.html"><img src="media/home.gif" alt="Home" width="81" height="39" border="0" /></a><a href="unix8.html"><img src="media/right.gif" alt="Next" width="37" height="39" border="0" /></a></p>
-<p align="center"><iframe src="http://rcm.amazon.com/e/cm?t=unixtutorialf-20&o=1&p=13&l=ur1&category=software&banner=19B9W0V74Z9KV3E29MR2&f=ifr" width="468" height="60" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe></p>
-<p class="date"> M.Stonebank@surrey.ac.uk, &copy; October 2001 </p>
+<p align="center"><a href="unix1.html"><img src="media/left.gif" alt="Previous" border="0" height="39" width="37" /></a> <a href="index.html"><img src="media/home.gif" alt="Home" border="0" height="39" width="81" /></a><a href="unix3.html"><img src="media/right.gif" alt="Next" border="0" height="39" width="37" /></a></p>
+<p class="date">M.Stonebank@surrey.ac.uk, © 9th October 2000 </p>
 </div>
-</body>
-</html>
+
+</body></html>
