--- a/pipeanswer.html
+++ b/pipeanswer.html
@@ -1,34 +1,38 @@
-<html>
-<head>
-<title> UNIX Tutorial Three </title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="Copyright" content="Michael Stonebank, 1995-2003" />
-<link href="unixtut2.css" rel="stylesheet" type="text/css" />
-<link href="unixtut2-print.css" rel="stylesheet" type="text/css" media="print" />
-</head>
-
-<body>
-<div id="container">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head>
+  <title>Hướng dẫn UNIX 3</title>
 
   
-<h1>Answer 3.4 </h1>
+  
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <h2>3.4 Using Pipes </h2>
+  
+  <meta name="Copyright" content="Michael Stonebank, 1995-2003">
 
-    
-<h3>Exercise 3b</h3>
-<p>Using pipes, display all lines of <strong>list1</strong> and <strong>list2</strong> 
-  containing the letter 'p', and sort the result.</p>
+  
+  <link href="unixtut2.css" rel="stylesheet" type="text/css">
+
+  
+  <link href="unixtut2-print.css" rel="stylesheet" type="text/css" media="print">
+
+</head><body>
+<div id="container">
+<h1>Đáp án 3.4 </h1>
+<h2>3.4 Sử dụng ống dẫn<br>
+</h2>
+<h3>Bài tập 3b</h3>
+<p>Sử dụng ống dẫn, in ra tất cả các dòng trong <span style="font-weight: bold;">list1</span> và <span style="font-weight: bold;">list2</span> chứa chữ 'h' và sắp xếp kết
+quả.</p>
 <p>&nbsp;</p>
 <h3>Answer</h3>
-<p class="cli">% cat list1 list2 | grep p | sort</p>
+<p class="cli">% cat list1 list2 | grep h | sort</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p class="date">M.Stonebank@ee.surrey.ac.uk, &copy; November, 2002</p>
+<p class="date">M.Stonebank@ee.surrey.ac.uk, © November, 2002</p>
 </div>
-</body>
-</html>
+
+</body></html>
