--- a/unix3.html
+++ b/unix3.html
@@ -17,155 +17,194 @@
   <link href="unixtut2-print.css" rel="stylesheet" type="text/css" media="print" /></head><body>
 <div id="container">
 <h1>Hướng dẫn UNIX 3<br />
- </h1>
+</h1>
 <h2>3.1 Chuyển hướng<br />
- </h2>
-<p>Most processes initiated by UNIX commands write to the standard
-output (that is, they write to the terminal screen), and many take
-their input from the standard input (that is, they read it from the
-keyboard). There is also the standard error, where processes write
-their error messages, by default, to the terminal screen. </p>
-<p> We have already seen one use of the <span class="command">cat</span>
-command to write the contents of a file to the screen. </p>
-<p> Now type <span class="command">cat</span> without specifing a file
-to read </p>
-<p class="cli"> % cat</p>
-<p>Then type a few words on the keyboard and press the [<b>Return</b>]
-key. </p>
-<p> Finally hold the [<b>Ctrl</b>] key down and press [<b>d</b>]
-(written as <b>^D</b> for short) to end the input. </p>
-<p> What has happened? </p>
-<p> If you run the <span class="command">cat</span> command without
-specifing a file to read, it reads the standard input (the keyboard),
-and on receiving the 'end of file' (<b>^D</b>), copies it to the
-standard output (the screen). </p>
-<p> In UNIX, we can redirect both the input and the output of commands.
+</h2>
+<p>Phần lớn các phần mềm UNIX in kết quả ra đầu ra chuẩn (standard
+output, thường là in ra màn hình), và nhận dữ liệu từ đầu vào chuẩn
+(standard input, thường là đọc từ bàn phím). Ngoài ra cũng có đầu ra
+lỗi chuẩn (standard error, thường cũng là màn hình), là nơi các phần
+mềm in ra thông báo lỗi.<br />
 </p>
+<p>Chúng ta đã biết một cách dùng lệnh&nbsp;<span class="command">cat</span>
+để in nội dung của tập tin ra màn hình.<br />
+</p>
+<p>Giờ thử dùng&nbsp;<span class="command">cat</span> mà không có đối
+số xem<br />
+</p>
+<p class="cli"> % cat</p>
+<p>Hãy gõ một vài từ vào bàn phím và gõ [<span style="font-weight: bold;">Return</span>] (phím Enter).</p>
+<p>Cuối cùng giữ phím [<span style="font-weight: bold;">Ctrl</span>] và
+nhấn [<span style="font-weight: bold;">d</span>] (viết tắt là <span style="font-weight: bold;">^D</span>) để kết thúc nhập liệu.</p>
+<p>Có chuyện gì đã xảy ra?<br />
+</p>
+<p>Nếu bạn chạy lệnh cat mà không đưa ra một tập tin nào cho nó đọc thì
+nó sẽ đọc từ đầu vào chuẩn (bàn phím), và khi nhận được tín hiệu 'kết
+thúc tập tin' (end of file, EOF, <span style="font-weight: bold;">^D</span>),
+nó sẽ sao chép nội dung đó ra đầu ra chuẩn (màn hình).</p>
+<p>Trong UNIX, chúng ta có thể chuyển hướng cả đầu ra lẫn đầu vào của
+lệnh.</p>
 <p> </p>
 <h2>3.2 Chuyển hướng đầu ra<br />
- </h2>
-<p>We use the &gt; symbol to redirect the output of a command. For
-example, to create a file called <strong>list1</strong> containing a
-list of fruit, type &nbsp; </p>
+</h2>
+<p>Chúng ta dùng ký hiệu &gt; (lớn hơn) để chuyển hướng đầu ra của
+lệnh. Ví dụ, để tạo tập tin tên là <span style="font-weight: bold;">list1</span>
+chứa danh sách các loại hoa quả, bạn gõ<br />
+</p>
 <p class="cli">% cat &gt; list1</p>
-<p>Then type in the names of some fruit. Press [<b>Return</b>] after
-each one. </p>
-<p class="cli">pear<br />
-banana<br />
-apple<br />
-^D {this means press [Ctrl] and [d] to stop}</p>
-<p>What happens is the cat command reads the standard input (the
-keyboard) and the &gt; redirects the output, which normally goes to the
-screen, into a file called <strong>list1</strong> </p>
-<p> To read the contents of the file, type </p>
+<p>Sau đó gõ tên một vài loại hoa quả. Nhấn [<span style="font-weight: bold;">Return</span>] khi muốn xuống dòng.</p>
+<p class="cli">lê<br />
+chuối<br />
+táo<br />
+^D {tức là gõ [Ctrl] và [d] để kết thúc}</p>
+<p>Lệnh&nbsp;<span class="command">cat</span> đọc từ đầu vào chuẩn (bàn
+phím) và dấu &gt; chuyển hướng đầu ra (thường là màn hình) vào một tập
+tin là <span style="font-weight: bold;">list1</span><br />
+</p>
+<p>Để đọc nội dung của tập tin này, bạn gõ<br />
+</p>
 <p class="cli">% cat list1</p>
-<h3>Exercise 3a</h3>
-<p>Using the above method, create another file called <strong>list2</strong>
-containing the following fruit: orange, plum, mango, grapefruit. Read
-the contents of <strong>list2</strong></p>
-<p>&nbsp;</p>
-<h3>3.2.1 Appending to a file </h3>
-<p>The form &gt;&gt; appends standard output to a file. So to add more
-items to the file <strong>list1</strong>, type </p>
+<h3>Bài tập 3a</h3>
+<p>Sử dụng phương pháp trên, tạo một tập tin khác tên là list2 chứa
+những loại hoa quả sau: cam, đào, xoài, nho. Đọc nội dung của <span style="font-weight: bold;">list2</span><br />
+</p>
+<h3>3.2.1 Ghi thêm vào cuối tập tin<br />
+</h3>
+<p>Ký tự &gt;&gt; chuyển hướng đầu ra chuẩn vào cuối tập tin. Vậy để
+thêm nhiều mục hơn cho tập tin <span style="font-weight: bold;">list1</span>,
+bạn gõ<br />
+</p>
 <p class="cli"> % cat &gt;&gt; list1</p>
-<p>Then type in the names of more fruit </p>
-<p class="cli"> peach<br />
-grape<br />
-orange<br />
-^D (Control D to stop)</p>
-<p>To read the contents of the file, type </p>
+<p>Sau đó gõ thêm nhiều tên hoa quả nữa<br />
+</p>
+<p class="cli"> đào<br />
+nho<br />
+cam<br />
+^D (để dừng lại)</p>
+<p>Để đọc nội dung của nó, bạn gõ</p>
 <p class="cli"> % cat list1</p>
-<p>You should now have two files. One contains six fruit, the other
-contains four fruit. </p>
-<p>We will now use the cat command to join (concatenate) <strong>list1</strong>
-and <strong>list2</strong> into a new file called <strong>biglist</strong>.
-Type </p>
+<p>Bạn sẽ có 2 tập tin. <span style="font-weight: bold;">list1</span>
+chứa 6 loại quả, <span style="font-weight: bold;">list2</span> chứa 4
+loại quả.</p>
+<p>Chúng ta sẽ sử dụng lệnh&nbsp;<span class="command">cat</span> để
+nối (concatenate, móc nối) <span style="font-weight: bold;">list1</span>
+và <span style="font-weight: bold;">list2</span> thành một tập tin mới
+tên là <span style="font-weight: bold;">biglist</span>. Bạn gõ</p>
 <p class="cli"> % cat list1 list2 &gt; biglist</p>
-<p>What this is doing is reading the contents of <strong>list1</strong>
-and <strong>list2</strong> in turn, then outputing the text to the
-file <strong>biglist</strong> </p>
-<p> To read the contents of the new file, type </p>
+<p>Lệnh này đọc lần lượt nội dung của <span style="font-weight: bold;">list1</span>
+và <span style="font-weight: bold;">list2</span>, sau đó in ra tập tin
+<span style="font-weight: bold;">biglist</span></p>
+<p>Để kiểm tra, bạn gõ<br />
+</p>
 <p class="cli"> % cat biglist</p>
 <h2>3.3 Chuyển hướng đầu vào<br />
- </h2>
-<p>We use the &lt; symbol to redirect the input of a command. </p>
-<p> The command sort alphabetically or numerically sorts a list. Type </p>
-<p class="cli"> % sort </p>
-<p> Then type in the names of some animals. Press [Return] after each
-one. </p>
-<p class="cli">dog<br />
-cat<br />
-bird<br />
-ape<br />
-^D (control d to stop)</p>
-<p> The output will be </p>
-<p class="output"> ape<br />
-bird <br />
-cat <br />
-dog </p>
-<p> Using &lt; you can redirect the input to come from a file rather
-than the keyboard. For example, to sort the list of fruit, type </p>
-<p class="cli"> % sort &lt; biglist </p>
-<p> and the sorted list will be output to the screen. </p>
-<p> To output the sorted list to a file, type, </p>
+</h2>
+<p>Chúng ta dùng ký tự &lt; để chuyển hướng đầu vào của lệnh.<br />
+</p>
+<p>Lệnh&nbsp;<span class="command">sort</span> sẽ sắp xếp một danh sách
+theo vần abc. Bạn gõ<br />
+</p>
+<p class="cli"> % sort</p>
+<p>Sau đó gõ tên một số loài động vật. Gõ [<span style="font-weight: bold;">Return</span>] sau mỗi con.</p>
+<p class="cli">chó<br />
+mèo<br />
+chim<br />
+khỉ<br />
+^D</p>
+<p>Kết quả in ra sẽ là<br />
+</p>
+<p class="output">chim<br />
+chó<br />
+khỉ<br />
+mèo<br />
+</p>
+<p>Sử dụng dấu &lt; bạn có thể chuyển hướng đầu vào từ một tập tin thay
+vì bàn phím. Ví dụ, để sắp xếp danh sách hoa quả, bạn gõ<br />
+</p>
+<p class="cli"> % sort &lt; biglist</p>
+<p>và sẽ nhận được danh sách hoa quả đã được sắp xếp.</p>
+<p>Để in ra danh sách đã được sắp xếp<br />
+</p>
 <p class="cli"> % sort &lt; biglist &gt; slist </p>
-<p> Use cat to read the contents of the file <strong>slist</strong></p>
+<p>Kiểm tra bằng lệnh <span class="command">cat</span></p>
 <h2>3.4 Ống dẫn<br />
 </h2>
-<p>To see who is on the system with you, type </p>
-<p class="cli"> % who </p>
-<p>One method to get a sorted list of names is to type, </p>
+<p>Để xem ai đang đăng nhập cùng với bạn, gõ<br />
+</p>
+<p class="cli"> % who <br />
+</p>
+<p class="hint">Ghi chú: trong hệ thống UNIX dùng cho máy tính cá nhân
+thường chỉ có một mình bạn đăng nhập, thử mở thêm một vài cửa sổ dòng
+lệnh hoặc tạo thêm tài khoản nữa xem.<br />
+
+</p>
+<p>Dưới đây là một cách để in ra danh sách đã sắp xếp<br />
+ </p>
+
 <p class="cli"> % who &gt; names.txt<br />
 % sort &lt; names.txt </p>
-<p>This is a bit slow and you have to remember to remove the temporary
-file called names when you have finished. What you really want to do is
-connect the output of the who command directly to the input of the sort
-command. This is exactly what pipes do. The symbol for a pipe is the
-vertical bar | </p>
-<p> For example, typing </p>
-<p class="cli"> % who | sort </p>
-<p>will give the same result as above, but quicker and cleaner. </p>
-<p> To find out how many users are logged on, type </p>
+<p>Cách này hơi lằng nhằng và bạn phải nhớ xóa tập tin tạm (<span style="font-weight: bold;">names.txt</span>)
+đi sau khi kết thúc. Bạn sẽ muốn kết nối đầu ra của lệnh who trực tiếp
+với đầu vào của lệnh sort. Đây chính là công dụng của ống dẫn. Ký hiệu
+cho ống dẫn là dấu gạch thẳng |<br />
+ </p>
+
+<p>Ví dụ<br />
+ </p>
+
+<p class="cli"> % who | sort</p>
+<p>lệnh này sẽ cho kết quả như trên, nhưng nhanh hơn và sạch sẽ hơn.</p>
+<p>Để biết được có bao nhiêu người đang cùng đăng nhập, bạn gõ</p>
+
 <p class="cli"> % who | wc -l</p>
-<h3>Exercise 3b</h3>
-<p>Using pipes, display all lines of <strong>list1</strong> and <strong>list2</strong>
-containing the letter 'p', and sort the result.</p>
-<p><a href="pipeanswer.html">Answer available here</a></p>
+<h3>Bài tập 3b</h3>
+<p>Sử dụng ống dẫn, hiển thị tất cả các dòng trong <span style="font-weight: bold;">list1</span> và <span style="font-weight: bold;">list2</span> có chứa chữ 'h' và sắp xếp kết quả.</p>
+
+<p><a href="pipeanswer.html">Đáp án ở đây<br />
+</a></p>
 <h2>Tổng kết<br />
- </h2>
+</h2>
 <table align="center" border="1" cellpadding="5" cellspacing="0">
   <tbody>
     <tr>
-      <th>Command</th>
-      <th>Meaning</th>
+      <th>Lệnh</th>
+      <th>Ý nghĩa<br />
+      </th>
     </tr>
     <tr>
       <td class="command"><var>command</var> &gt; <var>file</var></td>
-      <td>redirect standard output to a file</td>
+      <td>chuyển hướng đầu ra chuẩn ra tập tin<br />
+      </td>
     </tr>
     <tr>
       <td class="command"><var>command</var> &gt;&gt; <var>file</var></td>
-      <td>append standard output to a file </td>
+      <td>chuyển hướng đầu ra chuẩn vào cuối tập tin<br />
+      </td>
     </tr>
     <tr>
       <td class="command"><var>command</var> &lt; <var>file</var></td>
-      <td>redirect standard input from a file</td>
+      <td>chuyển hướng đầu vào chuẩn từ tập tin<br />
+      </td>
     </tr>
     <tr>
       <td class="command"><var>command1</var> | <var>command2</var></td>
-      <td>pipe the output of command1 to the input of command2</td>
+      <td>tạo ống dẫn đầu ra lệnh 1 vào đầu vào lệnh 2<br />
+      </td>
     </tr>
     <tr>
       <td class="command">cat <var>file1 file2</var> &gt; <var>file0</var></td>
-      <td>concatenate file1 and file2 to file0</td>
+      <td>ghép file1, file2 và dẫn ra file0<br />
+      </td>
     </tr>
     <tr>
       <td class="command">sort</td>
-      <td>sort data</td>
+      <td>sắp xếp dữ liệu<br />
+      </td>
     </tr>
     <tr>
       <td class="command">who</td>
-      <td>list users currently logged in</td>
+      <td>liệt kê những người dùng đang đăng nhập<br />
+      </td>
     </tr>
   </tbody>
 </table>
