Sửa unix1, thêm ví dụ

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title> Hướng dẫn sử dụng UNIX/Linux cho người mới bắt đầu</title>
+<html xmlns="http://www.w3.org/1999/xhtml"><head><title>Hướng dẫn sử dụng UNIX/Linux cho người mới bắt đầu</title>
+
+
+
+
 <link href="unixtut2.css" rel="stylesheet" type="text/css" />
 <link href="unixtut2-print.css" rel="stylesheet" type="text/css" media="print" />
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <meta name="Keywords" content="Unix Tutorial, Unix Guide, Beginners guide to Unix, Linux Tutorial, Linux Commands" />
 <meta name="Description" content="Beginners guide to the UNIX / Linux operating system.  Eight simple tutorials which cover the basics of UNIX." />
-<meta name="Copyright" content="Michael Stonebank, 1995-2003" />
-</head>
-<body>
+<meta name="Copyright" content="Michael Stonebank, 1995-2003" /></head><body>
 <div id="container">
 
 <h1>Hướng dẫn sử dụng UNIX cho người mới bắt đầu </h1>
@@ -22,7 +21,7 @@
 
 
 <blockquote>
-  <h3><a href="unixintro.html"> Hệ điều hành UNIX </a> </h3>
+  <h3><a href="unixintro.html">Giới thiệu về UNIX </a> </h3>
   <ul>
     <li> UNIX là gì?</li>
     <li> Tập tin và các tiến trình</li>
@@ -110,7 +109,7 @@
 </blockquote>
 <!-- Creative Commons License -->
   <div align="center">
-    <p class="hint"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/"><img alt="Creative Commons License" border="0" src="http://creativecommons.org/images/public/somerights20.gif" /></a><br />
+    <p class="hint"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/"><img alt="Creative Commons License" src="http://creativecommons.org/images/public/somerights20.gif" border="0" /></a><br />
       This tutorial is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/">Creative Commons License</a>.
       
       <!-- /Creative Commons License -->
@@ -147,7 +146,6 @@
 -->
     </p>
   </div>
-<p class="date"><b><img src="../../cgi-bin/Count.cgi@negate=N&amp;ft=0&amp;dd=C&amp;md=7&amp;comma=T&amp;df=unixtut.dat" alt="Page access counter" border="0" align="right" /> <a href="http://www.ee.surrey.ac.uk/Personal/M.Stonebank/">M.Stonebank@surrey.ac.uk</a>,  19 October 2001</b></p>
+<p class="date"><b><img src="../../cgi-bin/Count.cgi@negate=N&amp;ft=0&amp;dd=C&amp;md=7&amp;comma=T&amp;df=unixtut.dat" alt="Page access counter" align="right" border="0" /> <a href="http://www.ee.surrey.ac.uk/Personal/M.Stonebank/">M.Stonebank@surrey.ac.uk</a>,  19 October 2001</b></p>
 </div>
-</body>
-</html>
+</body></html>
